force-app/main/default/objects/CustomerTaxes__c/CustomerTaxes__c.object-meta.xml
<CustomObject>
    <label>Impostos do Cliente</label>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>Impostos do Cliente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impostos dos Clientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>