force-app/main/default/objects/CustomerTaxes__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Impostos dos Clientes</relationshipLabel>
    <relationshipName>Impostos_dos_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>