force-app/main/default/objects/CustomerTaxes__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organização de Venda</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Organizacao de Venda</relationshipLabel>
    <relationshipName>Organizacao_de_Venda</relationshipName>
    <type>Lookup</type>
</CustomField>