force-app/main/default/objects/CustomerTaxes__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imposto</label>
    <referenceTo>BarterTaxes__c</referenceTo>
    <relationshipLabel>Impostos dos Clientes</relationshipLabel>
    <relationshipName>Impostos_dos_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>