force-app/main/default/objects/CustomerTaxes__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <formula>Tax__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Imposto</label>
    <type>Text</type>
</CustomField>