force-app/main/default/objects/CustomerTaxes__c/listViews/ImpostosClientes.listView-meta.xml
<ListView>
    <fullName>ImpostosClientes</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Tax__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Mine</filterScope>
    <label>Impostos dos Clientes</label>
</ListView>